helmet package configured | start script modified | winston configuration done for logging

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "news-aggregator-api",
+  "name": "news-aggregator-api-cont",
   "version": "1.0.0",
   "description": "News Aggregator Backend API",
   "main": "app.js",
