--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node --watch --no-warnings src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --timeout 3000 --recursive test/**/*.js --exit"
   },
   "author": "Shani Kumar Gupta",
   "license": "ISC",
